Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -62,37 +62,30 @@ Dê os primeiros passos iniciais para dar inicio a revolução no seu negócio.
   </Card>
 </CardGroup>
 
-## Make it yours
+## Personalize o seu bot a sua maneira
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Adapte e personalize o seu bot a maneira de que seu negócio precisa.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
+    title="Customize o seu widget"
     icon="palette"
     href="https://mintlify.com/docs/settings/global"
   >
-    Customize your docs to your company's colors and brands
+    Altere os estilos, nome de referência e as preferências do seu bot na utilização do widget
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
+    title="Mudando a engine do seu bot"
+    icon="gears"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Mude o modelo da OpenAI que seu bot utiliza para gerar as respostas
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
+    title="Usando o playground"
+    icon="gamepad"
     href="https://mintlify.com/docs/components/accordion"
   >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
+    Utilize o playground para testar os seus documentos
   </Card>
 </CardGroup>
