Documentation edits made through Mintlify web editor

--- a/new-bot.mdx
+++ b/new-bot.mdx
@@ -1,1 +1,41 @@
+---
+title: Crie o seu primeiro bot
+description: "Aqui está os passos essenciais de como você pode criar o seu primeiro chatbot"
+---
 
+## Seu primeiro bot
+
+Bem-vindo ao guia de criação do seu primeiro chatbot! Neste tutorial, você aprenderá como criar um bot de chat a partir do zero em poucos passos simples. O nosso processo de criação é rápido, eficiente e não requer conhecimentos de programação. Com apenas alguns cliques, você estará no caminho para criar um assistente virtual personalizado.
+
+<Steps>
+    <Step title="Passo 1: Crie um Bot">
+      Na página inicial, você verá um botão chamado "Criar Bot". Clique nele para iniciar o processo de criação.
+      
+      
+    </Step>
+    <Step title="Passo 2: Configure as Configurações Iniciais">
+      Na tela de criação do bot, você será solicitado a preencher algumas informações iniciais:
+
+**Nome do Bot**: Escolha um nome para o seu chatbot. Isso ajudará a identificá-lo facilmente na sua lista de bots.
+
+**Frase de Saudação**: Defina a saudação que o seu bot usará quando interagir com os usuários pela primeira vez.
+
+**Perfil da IA**: Aqui, você pode configurar as características e personalidade do seu chatbot. Defina sua voz, tom de comunicação e outras preferências.
+    </Step>
+    <Step title="Passo 3: Explore o Seu Bot">
+    Após configurar as informações iniciais, você terá a opção de personalizar ainda mais o seu chatbot. Você pode:
+
+**Criar da base de conhecimento**: Antes de seu bot funcionar por completo você deve preenche-lo com a sua base de dados atráves de documentos importados ou escritos. Clique aqui para saber mais
+
+**Integrações**: Conecte o seu bot a outras ferramentas ou sistemas para torná-lo mais funcional. Clique aqui para saber mais
+
+**Playground**: Teste o seu bot para entender melhor as necessidades dos usuários, propondo perguntas para compreender as respostas ajustar o seu comportamento.
+    </Step>
+  </Steps> 
+
+## Conclusão
+**Parabéns! 🥳** Você criou o seu primeiro chatbot com sucesso. 
+
+Agora você pode usar o seu assistente virtual personalizado para automatizar tarefas, interagir com os usuários e fornecer suporte. Lembre-se de que você pode sempre voltar à plataforma para fazer atualizações e melhorias no seu bot. 
+
+Divirta-se criando e personalizando a sua IA!
