Documentation edits made through Mintlify web editor

--- a/new-bot.mdx
+++ b/new-bot.mdx
@@ -11,7 +11,7 @@ Bem-vindo ao guia de criação do seu primeiro chatbot! Neste tutorial, você ap
     <Step title="Passo 1: Crie um Bot">
       Na página inicial, você verá um botão chamado "Criar Bot". Clique nele para iniciar o processo de criação.
       
-      <Frame>
+      <Frame caption="Dashboard inicial">
       <img
         src="images/create_bot_btn.png"
         alt="create bot button"      
